# claude-code-capabilities

./: README.md  codecov.yml  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml
src/capdisc/scope/inventory/: roots.py
tests/: test_scope.py
