[project]
name = "capdisc"
version = "0.1.1"
description = "Discovers Claude Code capabilities — skills, agents, plugins, MCP servers, hooks — into typed catalogs and an environment report."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Magic-Man-us" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.4.4",
    "py-key-value-aio[filetree]>=0.4.5",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/Magic-Man-us/capability-discovery"
Repository = "https://github.com/Magic-Man-us/capability-discovery"

[project.scripts]
capdisc = "capdisc.report:main"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capdisc"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "SIM", "PTH",
    "RET", "TRY", "S", "ARG", "PL", "RUF",
]
ignore = ["TRY003", "PLR0913", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S102", "PLR2004", "ARG", "PLC0415"]
"__init__.py" = ["F401"]
# These models bind external camelCase JSON config keys (mcpServers, pluginConfigs) by field name.
"src/capdisc/mcp_harvest/config.py" = ["N815"]
"src/capdisc/plugin_catalog.py" = ["N815"]

[tool.ruff.lint.isort]
known-first-party = ["capdisc"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config -ra"

[tool.coverage.run]
source = ["src"]
branch = true
